--- a/techmonit/package.json
+++ b/techmonit/package.json
@@ -11,7 +11,11 @@
     "start": "vite"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-table": "^8.20.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
